# uPVE

./: README.md  upve.cabal
Web/: UPVE.hs
Web/UPVE/: Disks.hs  Internal.hs  Resources.hs  Types.hs
